<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SportsBuddy</string>
    <string name="app_name_words">Sports Buddy</string>

    <!-- Strings related to Parse -->
    <string name="application_id">KEYrTbDTamEX2fxfQ7B3Rqwe5EVBsltL4v7nib6h</string>
    <string name="client_key">1bQn5Nais4OvtQclrqPu0pRh0wgeGjx2evCEqzIq</string>
    <string name="error_internal_server">Server is down! Retry later!</string>
    <string name="error_connection_failed">Connection error! Retry later!</string>
    <string name="error_timeout">Timeout! Retry later!</string>
    <string name="error_general">Error!</string>

    <!-- Strings related to Twitter -->
    <string name="consumer_key">sTjsKYyaEO3eZpww2841Uzso9</string>
    <string name="consumer_secret">MRqpqOVvOjtTfGkUAnH8fZAEkfQsQS1JXHkknLGwiiux40phSs</string>

    <!-- Strings related to login and register -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_login">Login</string>
    <string name="action_join_now">Join Now</string>
    <string name="action_sign_up_now">Sign Up Now</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_password_not_match">The passwords do not match</string>
    <string name="error_username_taken">The username is already taken</string>
    <string name="error_email_taken">The email is already taken</string>
    <string name="error_incorrect_email_password">Incorrect email or password</string>
    <string name="error_unverified_email">Please verify your email first</string>
    <string name="register_successfully">Successfully registered!</string>

    <!-- Strings related to tab activity -->
    <string name="title_event">Event</string>
    <string name="title_team">Team</string>
    <string name="title_discussion">Discussion</string>
    <string name="title_profile">Profile</string>

    <!-- Strings related to event fragment -->
    <string name="error_already_joined_event">You have already joined this event!</string>

    <!-- Strings related to new event activity -->
    <string name="label_sport_type">Sport Type</string>
    <string name="prompt_sport_type">[Please Select A Sport]</string>

    <string-array name="sport_type_array">
        <item>Baseball</item>
        <item>Basketball</item>
        <item>Cycling</item>
        <item>Pool</item>
        <item>Racquetball</item>
        <item>Soccer</item>
        <item>Squash</item>
        <item>Tennis</item>
        <item>Volleyball</item>
    </string-array>

    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_location">Location</string>
    <string name="button_location">Choose Location in Map</string>
    <string name="label_max_people">Max People</string>
    <string name="label_visibility">Visibility</string>
    <string name="prompt_visibility">[Please Select Visibility]</string>
    <string name="label_notes">Notes</string>
    <string name="hint_notes">Input notes here or leave it empty...</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="error_invalid_date">Please select a future time!</string>
    <string name="error_empty_sport_type">Please select a sport!</string>
    <string name="error_empty_location">Please select location!</string>
    <string name="error_empty_visibility">Please select visibility!</string>
    <string name="event_created_successfully">Your event is created successfully!</string>

    <!-- Strings related to new event map activity -->
    <string name="hint_location">input location...</string>
    <string name="error_fail_to_get_location">Fail to get location!</string>
    <string name="error_no_location_found">No location found!</string>
    <string name="error_no_location_selected">Please choose location first!</string>

    <!-- Strings related to event popup window -->
    <string name="label_current_people">Current People</string>
    <string name="button_join">Join</string>
    <string name="event_join_successfully">You have successfully joined the event!</string>

    <!-- Strings related to new team activity -->
    <string name="label_team_name">Team Name</string>
    <string name="label_sports_type">Sports Type</string>
    <string name="label_upload_emblem">Upload Emblem</string>
    <string name="hint_team_description">Give a short description of your team...</string>
    <string name="button_create">Create</string>
    <string name="prompt_sports_type">[Please Select A Sports Type]</string>
    <string name="error_empty_team_name">Please input team name!</string>
    <string name="error_empty_sports_type">Please select a sports type!</string>
    <string name="error_team_name_taken">The team name is already taken</string>
    <string name="team_created_successfully">Your team is created successfully!</string>

    <!-- Strings related to discover team activity -->
    <string name="hint_search_view">Find teams to join...</string>

    <string-array name="discover_team_array">
        <item>Soccer</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Pool</item>
        <item>Volleyball</item>
        <item>Squash</item>
        <item>Cycling</item>
        <item>All</item>
    </string-array>

    <string name="dialog_title">Confirm Join Request</string>
    <string name="dialog_message">Do you want to join this team? Team leader will be notified.</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="request_sent">Request sent successfully!</string>
    <string name="error_team_not_found">No such team!</string>
    <string name="error_team_already_joined">You have already joined this team!</string>

    <!-- Strings related to team info activity -->
    <string name="button_leave">Leave Team</string>
    <string name="successfully_leave_team">Successfully leave the team!</string>
    <string name="menu_manage_requests">Manage Requests</string>
    <string name="menu_manage_requests_done">Done</string>

    <!-- Strings related to request management activity -->
    <string name="button_ignore">Ignore</string>
    <string name="button_approve">Approve</string>
    <string name="button_add_reply">Add Reply</string>

    <!-- Strings related to add reply activity -->
    <string name="button_reply">Reply</string>
    <string name="hint_reply">Add your reply here...</string>
    <string name="error_empty_reply">Please input your reply!</string>
    <string name="reply_successfully">Successfully replied!</string>

    <!-- Strings related to new discussion activity -->
    <string name="button_post">Post</string>
    <string name="hint_post_title">Discussion Title</string>
    <string name="hint_post_content">What would you like to discuss today?</string>
    <string name="error_empty_title">Please input title!</string>
    <string name="error_empty_content">Please input content!</string>
    <string name="successfully_post">Successfully posted!</string>

    <!-- Strings related to profile fragment -->
    <string name="profile_interest">Interests</string>
    <string name="profile_upcoming_events">Upcoming Events</string>
    <string name="profile_log_out">Log Out</string>
    <string name="profile_upload">Upload Avatar</string>
    <string name="profile_link_twitter">Link Twitter</string>
    <string name="profile_unlink_twitter">Unlink Twitter</string>
    <string name="profile_unlink_twitter_button">Unlink</string>
    <string name="profile_unlink_twitter_title">Unlink Twitter?</string>
    <string name="profile_unlink_twitter_message">Do you want to unlink your Twitter account?</string>
    <string name="profile_unlink_twitter_successfully">Successfully unlinked Twitter!</string>
    <string name="profile_logout_title">Confirm Logout</string>
    <string name="profile_logout_message">Are you sure you want to logout?</string>
    <string name="profile_logout_button">Yes</string>

    <!-- Strings related to Twitter OAuth activity -->
    <string name="successfully_link_twitter">Successfully linked Twitter!</string>
    
    <!-- Strings related to share event on Twitter -->
    <string name="dialog_share_title">Share on Twitter</string>
    <string name="dialog_share_message">Do you want to share this event on Twitter?</string>
    <string name="dialog_share_button">Share</string>

</resources>
