<LinearLayout
    android:id="@+id/layout_register"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_login"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/app_name_text_size"
        android:textColor="@color/white"
        android:text="@string/app_name_words" />

    <EditText
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_username"
        android:hint="@string/prompt_username"
        android:textColor="@color/white"
        android:textCursorDrawable="@null"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/register_email"
        android:hint="@string/prompt_email"
        android:textColor="@color/white"
        android:textCursorDrawable="@null"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_password"
        android:hint="@string/prompt_password"
        android:textColor="@color/white"
        android:textCursorDrawable="@null"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/register_confirm_password"
        android:hint="@string/prompt_confirm_password"
        android:textColor="@color/white"
        android:textCursorDrawable="@null"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up_now"
        android:layout_marginLeft="@dimen/button_margin"
        android:layout_marginRight="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:textStyle="bold"
        android:id="@+id/register_button"
        android:textColor="@color/white"
        android:layout_gravity="right" />

</LinearLayout>