<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/layout_new_discussion"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/post_title_text_size"
                android:hint="@string/hint_post_title"
                android:id="@+id/edit_post_title" />

            <EditText
                android:paddingTop="@dimen/post_content_padding_top"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_post_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/edit_post_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_post"
            android:id="@+id/button_post"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/button_cancel"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>