<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.qianchen.sportsbuddy.NewTeamActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/linear_layout">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/label_team_name"
                    android:textSize="@dimen/text_size"/>
                <EditText
                    android:inputType="textCapCharacters"
                    android:id="@+id/edit_team_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:ems="10"
                    android:textSize="@dimen/text_size"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_sports_type"
                    android:textSize="@dimen/text_size"/>
                <com.qianchen.sportsbuddy.NoDefaultSpinner
                    android:id="@+id/spinner_sports_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:prompt="@string/prompt_sports_type"
                    android:textSize="@dimen/text_size"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:paddingTop="@dimen/new_team_padding_top"
                android:textSize="@dimen/text_size">
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/label_upload_emblem"
                    android:textSize="@dimen/text_size"/>
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:src="@drawable/ic_upload_emblem"
                    android:background="?android:attr/selectableItemBackground"
                    android:id="@+id/button_upload_emblem" />
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingTop="@dimen/new_team_padding_top">
            </TableRow>
            <EditText
                android:id="@+id/edit_team_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_team_description"
                android:textSize="@dimen/text_size"/>
        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_create"
            android:id="@+id/button_create_team"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/button_cancel_team"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
