<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qianchen.sportsbuddy.NewEventMapActivity">

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_view"
        android:queryHint="@string/hint_location"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <fragment
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/search_view"
        android:layout_above="@+id/linear_layout"
        android:name="com.google.android.gms.maps.MapFragment"/>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            android:id="@+id/button_confirm"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/button_cancel"
            android:layout_weight="1" />
    </LinearLayout>



</RelativeLayout>
